@@ -9,9 +9,9 @@ logonUserGoto   = user^account
 recordLogin     = true
 
 [OrgMgr]
-enabled         = true
+enabled         = false
 requiresAuth    = true
-typeEnabled     = true
+typeEnabled     = false
 
 [OrgTypeMgr]
 requiresAuth    = true
